--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.51.1",
+    "@web3inbox/core": "^1.4.0",
+    "@web3inbox/react": "^1.4.0",
     "@web3modal/wagmi": "^5.0.6",
     "next": "14.2.5",
     "react": "^18",
