--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@web3inbox/core": "^1.4.0",
     "@web3inbox/react": "^1.4.0",
     "@web3modal/wagmi": "^5.0.6",
+    "ag-charts-react": "^10.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.408.0",
