--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.17.3",
-    "wagmi": "^2.10.10"
+    "wagmi": "^2.10.10",
+    "@uniswap/sdk-core": "^5.3.1",
+    "@uniswap/v3-periphery": "^1.4.4",
+    "@uniswap/v3-sdk": "^3.13.1",
+    "jsbi": "^3.1.4"
   },
   "devDependencies": {
     "@types/node": "^20",
